src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Quality_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is automatically updated when the Quality Description gets text saved into it.</description>
        <inlineHelpText>DO NOT UPDATE, enter data into Quality Description.  This will automatically update.</inlineHelpText>
        <label>Quality Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RGM_Approval_Name__c</fullName>
        <inlineHelpText>Which RGM Approved the concessions on this claim?</inlineHelpText>
        <label>RGM Approval Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RGM_Approved_Date__c</fullName>
        <inlineHelpText>When did the RGM approve this claim?</inlineHelpText>
        <label>RGM Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RGM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RGM is assigned by Selling Rep Office on the Account for the Order</description>
        <inlineHelpText>Value is taken from the Selling Rep Office on the Order</inlineHelpText>
        <label>RGM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RGM_Rejected_Date__c</fullName>
        <inlineHelpText>Date the RGM reject the concession.</inlineHelpText>
        <label>RGM Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RGM_Rejected_Name__c</fullName>
        <description>warranty claim</description>
        <inlineHelpText>Which RGM rejected the concession?</inlineHelpText>
        <label>RGM Rejected Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RGM_User__c</fullName>
        <formula>Order__r.Selling_Rep_Office__r.RGM_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RGM User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Authorization_Request__c</fullName>
        <inlineHelpText>Detailed Reason for Authorization Request</inlineHelpText>
        <label>Reason for Authorization Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Denial__c</fullName>
        <inlineHelpText>Why was the Warranty Authorization Requested Denied?</inlineHelpText>
        <label>Reason for Denial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Warranty_End_Date__c</fullName>
        <formula>Asset.Recommended_Warranty_End_Date__c</formula>
        <inlineHelpText>Primary Warranty End Date</inlineHelpText>
        <label>Recommended Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommended_Warranty_Start_Date__c</fullName>
        <description>Formula field captures Warranty Start Date definitions in order to be populated in a date field that would allow for manual overwrite. Calculated as 6 months from the Ship Date if there is not a Startup Date specified on the asset. If Startup date is populated, this date will reflect on the Warranty Start Date</description>
        <formula>Asset.Recommended_Warranty_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as 6 months from the Ship Date if there is not a Startup Date specified on the asset. If Startup date is populated, this date will reflect on the Warranty Start Date. Date can be overwritten if necessary.</inlineHelpText>
        <label>Recommended Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <inlineHelpText>An external Reference Number provided by the Requester. It can be the rep&apos;s work order number or Daikin Service office ASTEA numbers.  (This field is also used in email templates.)</inlineHelpText>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>MQLA</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>South Cone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Comments__c</fullName>
        <description>To display the comments for rejection</description>
        <inlineHelpText>The Comments that were added when the case was rejected.</inlineHelpText>
        <label>Reject Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repair_Date__c</fullName>
        <label>Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Compressor_Serial__c</fullName>
        <label>Replacement Compressor Serial #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Documents__c</fullName>
        <description>Required documents that are needed for the case to be completed.</description>
        <label>Required Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>COI</fullName>
                </value>
                <value>
                    <fullName>Consent Form</fullName>
                </value>
                <value>
                    <fullName>EFT/ACH</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Lease Amendment</fullName>
                </value>
                <value>
                    <fullName>Lease Summary and Approval Form</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>List-Daikin Applied Americas Inc Offcrs</fullName>
                </value>
                <value>
                    <fullName>List-Daikin Applied Canada Inc Offcrs</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>OSHA</fullName>
                </value>
                <value>
                    <fullName>Resale Tax Certificate/Tax Exemption</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
                <value>
                    <fullName>WSIB/WCB Clearance Letters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <label>Resolution Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Answered Question</fullName>
                </value>
                <value>
                    <fullName>Dispatch Daikin Applied Service Technician</fullName>
                </value>
                <value>
                    <fullName>Duplicate Call</fullName>
                </value>
                <value>
                    <fullName>Issued FPA to Rep</fullName>
                </value>
                <value>
                    <fullName>Moved to Change Request</fullName>
                </value>
                <value>
                    <fullName>Multiple requests</fullName>
                </value>
                <value>
                    <fullName>New Part Required</fullName>
                </value>
                <value>
                    <fullName>No action needed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performed Requested Task</fullName>
                </value>
                <value>
                    <fullName>SLP Rapid Response</fullName>
                </value>
                <value>
                    <fullName>Transferred to Customer Service</fullName>
                </value>
                <value>
                    <fullName>Transferred to Parts</fullName>
                </value>
                <value>
                    <fullName>Transferred to TRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsible_Person_Vendor_Recovery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the internal person that is working on the Vendor Recovery?</inlineHelpText>
        <label>Responsible Person (Vendor Recovery)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Line_Number__c</fullName>
        <formula>Asset.SO_Line_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <formula>Order__r.SO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_O_Number__c</fullName>
        <inlineHelpText>What is the S/O Number that the case is referencing?</inlineHelpText>
        <label>S/O Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <label>Sales Order</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Rep_Office__c</fullName>
        <formula>Order__r.Selling_Rep_Office__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Selling Rep Office for the Order</inlineHelpText>
        <label>Selling Rep Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Warranty: Notification has been sent to Quality</inlineHelpText>
        <label>Sent to Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Code_String__c</fullName>
        <label>Serial # Code String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Stamp__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Asset.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <formula>Asset.Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Startup_Date__c</fullName>
        <description>Startup Date field on the asset. If blank, assume none defined or delayed, etc. Used for Warranty definitions</description>
        <formula>Asset.Startup_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated from Asset. If blank, assume none defined or has been delayed</inlineHelpText>
        <label>Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <inlineHelpText>Date when the claim has been submitted to AP.</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuppliedCompany_PostalCode__c</fullName>
        <label>SuppliedCompany PostalCode</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Assigned__c</fullName>
        <description>Displays a list of technicians based upon selected Region.</description>
        <inlineHelpText>Displays a list of technicians based upon selected Region.</inlineHelpText>
        <label>Technician Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Angel Collazo Gonzalez</fullName>
                </value>
                <value>
                    <fullName>Esteban Pérez</fullName>
                </value>
                <value>
                    <fullName>Fabian Cabalceta</fullName>
                </value>
                <value>
                    <fullName>Jose Berrios Velez</fullName>
                </value>
                <value>
                    <fullName>Jose Doleo</fullName>
                </value>
                <value>
                    <fullName>Juan Ortiz Cordero</fullName>
                </value>
                <value>
                    <fullName>Julio Ortiz Rivera</fullName>
                </value>
                <value>
                    <fullName>Luis Colon Diaz</fullName>
                </value>
                <value>
                    <fullName>Mauricio Vidal</fullName>
                </value>
                <value>
                    <fullName>Osvaldo Oquendo Feliciano</fullName>
                </value>
                <value>
                    <fullName>Ramon Quiñones Delgado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technician_Needs_Add_l_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually updated by the case owner. They may determine that the Technicina needs additional training. This is used by the TRC - ATS, AAH &amp; Chillers group.</description>
        <inlineHelpText>If the case owner determines that the technician needs additional training they should check this box.</inlineHelpText>
        <label>Technician Needs Add&apos;l Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Mins__c</fullName>
        <formula>VALUE(TEXT(Time_Spent_Working__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Changes the Time Spent Working from a text field to number so &quot;summing&quot; can be done on reports.</inlineHelpText>
        <label>Time Spent (Mins`)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Working__c</fullName>
        <inlineHelpText>How much &quot;Actual&quot; time did you spend on working the case?
(If you want to summarize this field use the &quot;Time Spent (Mins)&quot; field.)</inlineHelpText>
        <label>Time Spent Working</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_first_activity__c</fullName>
        <formula>First_Activity_Date_and_Time__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to first activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Summed_Amount_Approved__c</fullName>
        <formula>IF( 
Labor_Amount_Approved__c  + Daikin_Parts_Amount_Approved__c + Additional_Materials_Amount_Approved__c +  X3rd_Party_Parts_Amount_Approved__c&gt;0, 

Labor_Amount_Approved__c + Daikin_Parts_Amount_Approved__c + Additional_Materials_Amount_Approved__c + X3rd_Party_Parts_Amount_Approved__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Labor, Daikin Parts, 3rd-Party Parts &amp; Additional Materials Amount Approved</inlineHelpText>
        <label>Total Summed Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Summed_Amount_Requested__c</fullName>
        <description>The total amount that has been requested for Warranty claims. Compare with Amount Approved</description>
        <formula>IF(
Labor_Amount_Requested__c + Daikin_Parts_Amount_Requested__c + Additional_Materials_Amount_Requested__c + X3rd_Party_Parts_Amount_Requested__c&gt;0,

Labor_Amount_Requested__c + Daikin_Parts_Amount_Requested__c + Additional_Materials_Amount_Requested__c + X3rd_Party_Parts_Amount_Requested__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total requested reimbursement amount for product under Warranty (Parts &amp; Labor).</inlineHelpText>
        <label>Total Summed Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Under_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent_Reason__c</fullName>
        <description>Defines why the status has been updated to Urgent.  Workflows that send emails are dependent on this field</description>
        <inlineHelpText>Why is the Status Urgent?</inlineHelpText>
        <label>Urgent Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Priority</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Angry Customer</fullName>
                </value>
                <value>
                    <fullName>Bidding soon</fullName>
                </value>
                <value>
                    <fullName>Critical facility</fullName>
                </value>
                <value>
                    <fullName>Escalated to Upper Management</fullName>
                </value>
                <value>
                    <fullName>Govt Bldg</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>RGM Called</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Tech called multiple times</fullName>
                </value>
                <value>
                    <fullName>Unit is Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Current_Status__c</fullName>
        <description>For Warranty</description>
        <inlineHelpText>This field should be updated as the Vendor Recovery process proceeds.</inlineHelpText>
        <label>Recovery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed Received</fullName>
                </value>
                <value>
                    <fullName>Closed Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Credit</fullName>
                </value>
                <value>
                    <fullName>Received Credit/Notified AP</fullName>
                </value>
                <value>
                    <fullName>New Item</fullName>
                    <isActive>false</isActive>
                    <label>New Item</label>
                </value>
                <value>
                    <fullName>Notified AP</fullName>
                    <isActive>false</isActive>
                    <label>Notified AP</label>
                </value>
                <value>
                    <fullName>Received Credit</fullName>
                    <isActive>false</isActive>
                    <label>Received Credit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What is the Name of the Vendor for the Vendor Recovery?</inlineHelpText>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Vendor Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Received_Amount__c</fullName>
        <inlineHelpText>How much did we receive from the Vendor for the Vendor Recovery?</inlineHelpText>
        <label>Vendor Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Received_Date__c</fullName>
        <inlineHelpText>When was the Vendor Recovery Received?</inlineHelpText>
        <label>Vendor Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Recovery_Notes__c</fullName>
        <inlineHelpText>Notes that are specific to the Vendor Recovery process</inlineHelpText>
        <label>Vendor Recovery Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Recovery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is Vendor recovery necessary?</inlineHelpText>
        <label>Vendor Recovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Reference__c</fullName>
        <description>For Warranty</description>
        <inlineHelpText>If a Vendor gives a reference # for Vendor Recovery, it should be populated here.</inlineHelpText>
        <label>Vendor Reference #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Requested_Amount__c</fullName>
        <inlineHelpText>How much was requested for the Vendor to pay?</inlineHelpText>
        <label>Vendor Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Requested_Date__c</fullName>
        <inlineHelpText>When was the Vendor Recovery Requested?</inlineHelpText>
        <label>Vendor Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiting_On__c</fullName>
        <description>Used by Licensing.  When they are gathering information for the &quot;license&quot; who are they waiting on to provide them additional information?</description>
        <label>Waiting On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>District Manager</fullName>
                </value>
                <value>
                    <fullName>EVE</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Marsh</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Service/Sales Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <inlineHelpText>Which warehouse was this product shipped from?</inlineHelpText>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laredo</fullName>
                    <label>WSLP/Laredo</label>
                </value>
                <value>
                    <fullName>Staunton</fullName>
                </value>
                <value>
                    <fullName>Outside Vendor</fullName>
                </value>
                <value>
                    <fullName>Both - WSLP &amp; STN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Approval_Progress__c</fullName>
        <formula>IF(ISPICKVAL(Approval_Status__c, &quot;Submitted&quot;) ,IMAGE(&quot;/resource/Warranty_Case_ApprovalSubmitted&quot;, &quot;Warranty_Case_Approval_Submitted&quot;, 55, 600) 

,IF(OR(ISPICKVAL(Approval_Status__c, &quot;PGM/RGM Approved&quot;), ISPICKVAL( Approval_Status__c, &quot;Admin Approved&quot;), ISPICKVAL( Approval_Status__c, &quot;EVP Approved&quot;), ISPICKVAL( Approval_Status__c, &quot;CEO Approved&quot;)),IMAGE(&quot;/resource/Warranty_Case_Approval_In_Approvals&quot;, &quot;Warranty_Case_Approval_In_Approvals&quot;, 55, 600)

,IF(ISPICKVAL(Approval_Status__c, &quot;Warranty Approved&quot;) ,IMAGE(&quot;/resource/Warranty_Case_Approval_Approved&quot;, &quot;Warranty_Case_Approval_Approved&quot;, 55, 600)

,IF(OR(ISPICKVAL(Approval_Status__c, &quot;PGM/RGM Rejected&quot;), ISPICKVAL( Approval_Status__c, &quot;EVP Rejected&quot;), ISPICKVAL( Approval_Status__c, &quot;CEO Rejected&quot;), ISPICKVAL( Approval_Status__c, &quot;Warranty Rejected&quot;)),IMAGE(&quot;/resource/Warranty_Case_Approval_Rejected&quot;, &quot;Warranty_Case_Approval_Rejected&quot;, 55, 600)

, IMAGE(&quot;/resource/Warranty_Case_Approval_Not_Submitted&quot;, &quot;Warranty_Case_Approval_Not_Submitted&quot;, 55, 600) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Approval Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Approved_Ttl__c</fullName>
        <inlineHelpText>This is the Warranty Total Approved portion of the claim.</inlineHelpText>
        <label>Warranty Approved Ttl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warranty_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field captures the Warranty Admin user based on business unit. This is populated via Process Builder</description>
        <inlineHelpText>The Warranty Admin assigned to approve based on Business Unit</inlineHelpText>
        <label>Warranty Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Warranty_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Claim_Image__c</fullName>
        <formula>IMAGE(&quot;/resource/WarrantyClaim&quot;, &quot;Warranty_Claim&quot;,35,180)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Header__c</fullName>
        <formula>IMAGE(&quot;/resource/WarrantyHeader&quot;, &quot;Warranty_Header&quot;,35,180)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Requested_Ttl__c</fullName>
        <description>Warranty</description>
        <inlineHelpText>This is the Warranty Total Requested portion of the claim.</inlineHelpText>
        <label>Warranty Requested Ttl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Company_Address__c</fullName>
        <label>Web Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_Company_City__c</fullName>
        <label>Web Company City</label>
        <length>70</length>
        <type>Text</type>
    </fields>
</CustomObject>